# alsa-plugins-rsound

./: Makefile.am  configure.in
roar/: Makefile.am  mixer.c  pcm.c  pcm_roar.c  roar.c  roar.h  thread.c
rsound/: Makefile.am  librsound.c  pcm_rsound.c  rsound.c  rsound.h
